# CSoT_2026_Low_Latency

./: .gitignore  CMakeLists.txt  README.md  STRATEGY_SPEC.md  TROUBLESHOOTING.md
.github/workflows/: build.yml
bench/: bench.cpp
data/: gen.py  synthetic_small.csv  tiny.csv
include/: engine.hpp  histogram.hpp  reclaimable.hpp  strategy.hpp
src/: engine.cpp  main.cpp
strategies/: spec_strategy.cpp
